# agh-sr

./: .gitignore  pyproject.toml
lab1/: lab1_basket_analysis.ipynb
lab2/: bandit_framework.py  lab2_bandits_v2.ipynb
lab3/: lab3_segmentation_v2.ipynb
lab4/: lab4_news.ipynb
lab5/: lab5_group_recommenders_v2.ipynb
lab6/: lab6_graph_recommenders.ipynb
