[tool.poetry]
name = "rekomendacyjne"
version = "0.1.0"
description = ""
authors = ["Radosław Cybulski <radoslaw.cybulski@swmansion.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
more-itertools = "^10.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
