[tool.poetry]
name = "rekomendacyjne"
version = "0.1.0"
description = ""
authors = ["Radosław Cybulski <radoslaw.cybulski@swmansion.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
more-itertools = "^10.5.0"
tabulate = "^0.9.0"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
wordcloud = "^1.9.3"
gensim = "^4.3.3"
pandas = "^2.2.3"
pykeen = "^1.11.0"
torch = "^2.5.1"
tqdm = "^4.67.0"
seaborn = "^0.13.2"
jupyter = "^1.1.1"
ipywidgets = "^8.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
